[package]
name = "echo"
version = "0.1.0"
authors = ["superLish <s_lisheng@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
simple_logger = "1.0"
futures = "0.3.8"
tokio = { version = "0.3", features = ["full"] }