[package]
name = "executor"
version = "0.1.0"
authors = ["shengli <s_lisheng@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "1.11.0"
pin-utils = "0.1.0"
async-task = "4.0.3"
futures = "0.3"
once_cell = "1.5.2"
crossbeam = "0.8.0"
num_cpus = "1"
custom-futures = { path = "../custom-futures"}