[package]
name = "pgmq-consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
pgmq = "0.30.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono", "json"] }
serde = "1.0"
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"